# fgobject

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeLists.txt  util.cmake
demos/: CMakeLists.txt  base.c  base.h  derived.c  derived.h  main.c
demos/base/: CMakeLists.txt
demos/shape/: CMakeLists.txt  circle.c  circle.h  drawable.c  drawable.h  main.c  rectangle.c  rectangle.h  shape.c  shape.h
gcons/: CMakeLists.txt  gonce.c  gonce.h
gstor/: CMakeLists.txt  gatomicarray.c  gatomicarray.h  ghash.c  ghash.h  gmem.c  gmem.h  gonce.h  gquark.c  gquark.h  gslice.c  gslice.h  gslist.c  gslist.h  gstrfuncs.h
gsync/: CMakeLists.txt  gatomic.h  grefcount.h  gthread-posix.c  gthread.c  gthread.h
gtype/: CMakeLists.txt  gtype.c  gtype.h  gtypemodule.c  gtypemodule.h  gtypeplugin.c  gtypeplugin.h
gutil/: CMakeLists.txt  config.h  glibconfig.h  gmacros.h  gmem.c  gmessages.c  gmessages.h  gstrfuncs.c  gstrfuncs.h  gtypes.h  gutils.c  gutils.h  gversionmacros.h
recycle/glib/: gmain.c  gmain.h  gtestutils.h
tests/: gtestutils.c  monad.c
